src/objects/FinancialCustomerAccounts__x.object
<CustomObject>
    <description>FinancialCustomerAccounts</description>
    <externalDataSource>ODS_Data</externalDataSource>
    <externalName>FinancialCustomerAccounts</externalName>
    <fields>
        <fullName>AcctNum__c</fullName>
        <description>AcctNum</description>
        <externalDeveloperName>AcctNum</externalDeveloperName>
        <label>HFS Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctStsCd__c</fullName>
        <description>AcctStsCd</description>
        <externalDeveloperName>AcctStsCd</externalDeveloperName>
        <label>HFS Account Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctStsDt__c</fullName>
        <description>AcctStsDt</description>
        <externalDeveloperName>AcctStsDt</externalDeveloperName>
        <label>HFS Account Status Date Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BalloonCd__c</fullName>
        <description>BalloonCd</description>
        <externalDeveloperName>BalloonCd</externalDeveloperName>
        <label>Balloon Financial Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurMaturityDt__c</fullName>
        <description>CurMaturityDt</description>
        <externalDeveloperName>CurMaturityDt</externalDeveloperName>
        <label>Current Maturity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CurPaymtAmt__c</fullName>
        <description>CurPaymtAmt</description>
        <externalDeveloperName>CurPaymtAmt</externalDeveloperName>
        <label>Current Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurTrm__c</fullName>
        <description>CurTrm</description>
        <externalDeveloperName>CurTrm</externalDeveloperName>
        <label>Current Contract Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustNum__c</fullName>
        <description>CustNum</description>
        <externalDeveloperName>CustNum</externalDeveloperName>
        <label>Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealrCd__c</fullName>
        <description>DealrCd</description>
        <externalDeveloperName>DealrCd</externalDeveloperName>
        <label>Dealer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealrId__c</fullName>
        <description>DealrId</description>
        <externalDeveloperName>DealrId</externalDeveloperName>
        <label>Dealer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DoorTypCd__c</fullName>
        <description>DoorTypCd</description>
        <externalDeveloperName>DoorTypCd</externalDeveloperName>
        <label>Door Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtnCnt__c</fullName>
        <description>ExtnCnt</description>
        <externalDeveloperName>ExtnCnt</externalDeveloperName>
        <label>Number of Extensions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinclAcctCd__c</fullName>
        <description>FinclAcctCd</description>
        <externalDeveloperName>FinclAcctCd</externalDeveloperName>
        <label>HFS Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinclCustAcctId__c</fullName>
        <description>FinclCustAcctId</description>
        <externalDeveloperName>FinclCustAcctId</externalDeveloperName>
        <label>FinclCustAcctId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LoanEntryDt__c</fullName>
        <description>LoanEntryDt</description>
        <externalDeveloperName>LoanEntryDt</externalDeveloperName>
        <label>Contract Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LoanRt__c</fullName>
        <description>LoanRt</description>
        <externalDeveloperName>LoanRt</externalDeveloperName>
        <label>Current Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MakeCd__c</fullName>
        <description>MakeCd</description>
        <externalDeveloperName>MakeCd</externalDeveloperName>
        <label>MakeCd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MdlCd__c</fullName>
        <description>MdlCd</description>
        <externalDeveloperName>MdlCd</externalDeveloperName>
        <label>Model Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MdlYr__c</fullName>
        <description>MdlYr</description>
        <externalDeveloperName>MdlYr</externalDeveloperName>
        <label>Model Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MdmUcid__c</fullName>
        <description>MdmUcid</description>
        <externalDeveloperName>MdmUcid</externalDeveloperName>
        <label>Link to Customer</label>
        <length>255</length>
        <referenceTargetField>Contact.UCID__c</referenceTargetField>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>HFS Financial Accounts</relationshipLabel>
        <relationshipName>FinancialCustomerAccounts</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>NewUsedCd__c</fullName>
        <description>NewUsedCd</description>
        <externalDeveloperName>NewUsedCd</externalDeveloperName>
        <label>New / Use Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriglLoanAmt__c</fullName>
        <description>OriglLoanAmt</description>
        <externalDeveloperName>OriglLoanAmt</externalDeveloperName>
        <label>Original Contract Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OriglLoanRt__c</fullName>
        <description>OriglLoanRt</description>
        <externalDeveloperName>OriglLoanRt</externalDeveloperName>
        <label>Original Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaymtMadeCnt__c</fullName>
        <description>PaymtMadeCnt</description>
        <externalDeveloperName>PaymtMadeCnt</externalDeveloperName>
        <label>Number of Payments Made</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaymtRmvdCnt__c</fullName>
        <description>PaymtRmvdCnt</description>
        <externalDeveloperName>PaymtRmvdCnt</externalDeveloperName>
        <label>Number of Payments Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PayoffAmt__c</fullName>
        <description>PayoffAmt</description>
        <externalDeveloperName>PayoffAmt</externalDeveloperName>
        <label>Current Payoff Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vin__c</fullName>
        <description>Vin</description>
        <externalDeveloperName>Vin</externalDeveloperName>
        <label>VIN / Serial #</label>
        <length>128</length>
        <referenceTargetField>VIN__c.ProductSerialNumber__c</referenceTargetField>
        <referenceTo>VIN__c</referenceTo>
        <relationshipLabel>HFS Financial Accounts</relationshipLabel>
        <relationshipName>FinancialCustomerAccounts</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <label>HFS Financial Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MdmUcid__c</columns>
        <columns>ExternalId</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>HFS Financial Accounts</pluralLabel>
</CustomObject>